src/ui/line/snapshots/rgr__ui__line__item__tests__to_span_lines_with_deselected_submatch.snap
---
source: src/ui/line/item.rs
expression: item.to_span_lines(&ctx)
---
[
    Line::from_iter([
        Span::from("197:").yellow(),
        Span::from("    ").yellow(),
        Span::from("Item").yellow().on_dark_gray(),
        Span::from("::new(").yellow(),
        Span::from("rg_msg").black().on_red(),
        Span::from(")").yellow(),
    ]),
]
