src/ui/line/snapshots/rgr__ui__line__item__tests__to_span_lines_with_deselected_submatch_confirm_replacement.snap
---
source: src/ui/line/item.rs
expression: item.to_span_lines(&ctx)
---
[
    Line::from_iter([
        Span::from("197:").dark_gray(),
        Span::from("    "),
        Span::from("Item"),
        Span::from("::new("),
        Span::from("foobar").green(),
        Span::from(")"),
    ]),
]
