src/ui/line/snapshots/rgr__ui__line__item__tests__to_span_lines_with_deselected_submatch_input_replacement.snap
---
source: src/ui/line/item.rs
expression: item.to_span_lines(&ctx)
---
[
    Line::from_iter([
        Span::from("197:").dim(),
        Span::from("    "),
        Span::from("Item"),
        Span::from("::new("),
        Span::from("rg_msg").red().crossed_out(),
        Span::from("foobar").green(),
        Span::from(")"),
    ]),
]
