src/ui/line/snapshots/rgr__ui__line__item__tests__to_span_lines_with_multiline_matches.snap
---
source: src/ui/line/item.rs
expression: new_item(RG_JSON_MATCH_MULTILINE).to_span_lines(&ctx)
---
[
    Line::from_iter([
        Span::from("3:").dim(),
        Span::from("baz "),
        Span::from("1").red().bold().reversed(),
    ]),
    Line::from_iter([
        Span::from("4:").dim(),
        Span::from("22").red().bold().reversed(),
    ]),
    Line::from_iter([
        Span::from("5:").dim(),
        Span::from("333").red().bold().reversed(),
        Span::from(" bar "),
        Span::from("4444").red().bold().reversed(),
        Span::default(),
    ]),
]
