src/ui/line/snapshots/rgr__ui__line__item__tests__to_span_lines_with_text_confirm_replacement-3.snap
---
source: src/ui/line/item.rs
expression: new_item(RG_JSON_CONTEXT).to_span_lines(&ctx)
---
[
    Line {
        spans: [
            Span {
                content: "198:",
                style: Style {
                    fg: Some(
                        DarkGray,
                    ),
                    bg: None,
                    underline_color: None,
                    add_modifier: NONE,
                    sub_modifier: NONE,
                },
            },
            Span {
                content: "  }",
                style: Style {
                    fg: None,
                    bg: None,
                    underline_color: None,
                    add_modifier: NONE,
                    sub_modifier: NONE,
                },
            },
        ],
        alignment: None,
    },
]
